snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha256
88c28a6f4b120a3cb6b1309f52555797ae69058baefa060cbf011f85b6037a2c